# market-microstructure-engine

./: .gitignore  CMakeLists.txt  DESIGN.md  MICROSTRUCTURE_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_orders.csv
docs/: BENCHMARKS.md  PORTFOLIO_REVIEW.md
native/include/mm_engine/: order_book.hpp
native/src/: benchmark.cpp  order_book.cpp
native/tests/: order_book_test.cpp
results/: python_benchmark_ryzen9800x3d.json
scripts/: plot_latency.py
src/mm_engine/: __init__.py  benchmark.py  order_book.py
tests/: test_benchmark.py  test_order_book.py
tools/: compare_benchmarks.py
