[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "market-microstructure-engine"
version = "0.1.0"
description = "Deterministic limit-order-book and matching-engine reference implementation."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

